...
            val yearId = repository.insertAcademicYear(
                AcademicYear(name = "2025-2026", holidays = "2026-01-01,2026-05-01,2026-05-09", isActive = true)
            ).toInt()

            // 2. Groups
            val g1 = repository.insertGroup(
                Group(name = "Группа А (Младшая)", academicYearId = yearId, disciplines = "Рисунок,Живопись,Композиция", schedule = "1:Рисунок,3:Живопись")
            ).toInt()
            val g2 = repository.insertGroup(
                Group(name = "Группа Б (Старшая)", academicYearId = yearId, disciplines = "Рисунок,Живопись,История Искусств", schedule = "2:Рисунок,4:Живопись")
            ).toInt()

            // Quarters Setup
...
